# CCT

./: .gitignore  README.md  physics.py
.github/workflows/: ci.yml
causa_core/: Cargo.toml
causa_core/src/: error.rs  lib.rs
causa_core/src/spacetime/: event.rs  manifold.rs  mod.rs
causa_py/: __init__.py  physics.py  pyproject.toml
causa_py/tests/: test_physics.py  test_spacetime.py
